<resources>
    <string name="app_name">Minesweeper</string>
    <string name="minesweeper_title" translatable="false">Minesweeper</string>
    <string name="minesweeper_easy">Easy</string>
    <string name="minesweeper_medium">Medium</string>
    <string name="minesweeper_hard">Hard</string>
    <string name="minesweeper_size_x">Width</string>
    <string name="minesweeper_size_y">Height</string>
    <string name="minesweeper_play_again">Play again</string>
    <string name="minesweeper_back">Back to main menu</string>
    <string name="minesweeper_game_over">Game Over</string>
    <string name="minesweeper_win">You won!</string>
    <string name="minesweeper_score" translatable="false">Score</string>


    <string name="minesweeper_abort_game_title">Abort game</string>
    <string name="minesweeper_abort_game_message">Are you sure you want to quit this game? The score will be deleted.</string>
    <string name="minesweeper_abort_game_cancel">Cancel</string>
    <string name="minesweeper_game_abort_confirm">Confirm</string>

</resources>