<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DD252525">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/minesweeper_title"
            android:textColor="#fff"
            android:textSize="36sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="32dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/minesweeper_start_screen_easy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/minesweeper_easy" />

            <Button
                android:id="@+id/minesweeper_start_screen_medium"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/minesweeper_medium" />

            <Button
                android:id="@+id/minesweeper_start_screen_hard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/minesweeper_hard" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/minesweeper_size_x"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/minesweeper_start_screen_size_x"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="10"
                    android:progress="3" />

                <TextView
                    android:id="@+id/minesweeper_start_screen_size_x_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:textColor="@color/white" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/minesweeper_size_y"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/minesweeper_start_screen_size_y"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="10"
                    android:progress="3" />

                <TextView
                    android:id="@+id/minesweeper_start_screen_size_y_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>